[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/wave_designer/wave_nodes/clamp_filter.gd" type="Script" id=1]
[ext_resource path="res://ui/wave_designer/wave_nodes/title_bar.tscn" type="PackedScene" id=2]

[node name="ClampFilter" type="PanelContainer"]
margin_right = 170.0
margin_bottom = 394.0
size_flags_horizontal = 9
size_flags_vertical = 9
script = ExtResource( 1 )
__meta__ = {

}

[node name="VBC" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 163.0
margin_bottom = 387.0
__meta__ = {

}

[node name="Title" parent="VBC" instance=ExtResource( 2 )]
margin_right = 156.0
title = "Amplitude"
index = 0

[node name="Params" type="GridContainer" parent="VBC"]
margin_top = 24.0
margin_right = 156.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 2
custom_constants/hseparation = 8
columns = 2
__meta__ = {

}

[node name="LabelUClampOn" type="Label" parent="VBC/Params"]
margin_top = 5.0
margin_right = 54.0
margin_bottom = 19.0
text = "Clamp U"
__meta__ = {

}

[node name="UClampOn" type="CheckBox" parent="VBC/Params"]
margin_left = 62.0
margin_right = 136.0
margin_bottom = 24.0
__meta__ = {

}

[node name="LabelUClamp" type="Label" parent="VBC/Params"]
margin_top = 31.0
margin_right = 54.0
margin_bottom = 45.0
text = "Clamp U"
__meta__ = {

}

[node name="UClamp" type="SpinBox" parent="VBC/Params"]
margin_left = 62.0
margin_top = 26.0
margin_right = 136.0
margin_bottom = 50.0
focus_mode = 2
min_value = -100.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelLClampOn" type="Label" parent="VBC/Params"]
margin_top = 57.0
margin_right = 54.0
margin_bottom = 71.0
text = "Clamp L"
__meta__ = {

}

[node name="LClampOn" type="CheckBox" parent="VBC/Params"]
margin_left = 62.0
margin_top = 52.0
margin_right = 136.0
margin_bottom = 76.0
__meta__ = {

}

[node name="LabelLClamp" type="Label" parent="VBC/Params"]
margin_top = 83.0
margin_right = 54.0
margin_bottom = 97.0
text = "Clamp L"
__meta__ = {

}

[node name="LClamp" type="SpinBox" parent="VBC/Params"]
margin_left = 62.0
margin_top = 78.0
margin_right = 136.0
margin_bottom = 102.0
focus_mode = 2
min_value = -100.0
value = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelVol" type="Label" parent="VBC/Params"]
margin_top = 109.0
margin_right = 54.0
margin_bottom = 123.0
text = "Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vol" type="SpinBox" parent="VBC/Params"]
margin_left = 62.0
margin_top = 104.0
margin_right = 136.0
margin_bottom = 128.0
focus_mode = 2
min_value = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="VBC/Params"]
margin_top = 130.0
margin_right = 54.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 24 )
__meta__ = {

}

[node name="ReferenceRect2" type="ReferenceRect" parent="VBC/Params"]
margin_left = 62.0
margin_top = 130.0
margin_right = 136.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 24 )
__meta__ = {

}

[node name="LabelOutput" type="Label" parent="VBC/Params"]
margin_top = 159.0
margin_right = 54.0
margin_bottom = 173.0
text = "Output"
__meta__ = {

}

[node name="Output" type="OptionButton" parent="VBC/Params"]
margin_left = 62.0
margin_top = 156.0
margin_right = 136.0
margin_bottom = 176.0
text = "Off"
items = [ "Off", null, false, 0, null, "Replace", null, false, 1, null, "Add", null, false, 2, null, "AM", null, false, 4, null, "XM", null, false, 5, null ]
selected = 0
__meta__ = {

}

[node name="LabelFrom" type="Label" parent="VBC/Params"]
margin_top = 183.0
margin_right = 54.0
margin_bottom = 197.0
text = "From"
__meta__ = {

}

[node name="From" type="SpinBox" parent="VBC/Params"]
margin_left = 62.0
margin_top = 178.0
margin_right = 136.0
margin_bottom = 202.0
min_value = -1.0
__meta__ = {

}

[node name="LabelAM" type="Label" parent="VBC/Params"]
margin_top = 209.0
margin_right = 54.0
margin_bottom = 223.0
text = "AM"
__meta__ = {

}

[node name="AM" type="SpinBox" parent="VBC/Params"]
margin_left = 62.0
margin_top = 204.0
margin_right = 136.0
margin_bottom = 228.0
min_value = -100.0
__meta__ = {

}

[node name="LabelXM" type="Label" parent="VBC/Params"]
margin_top = 235.0
margin_right = 54.0
margin_bottom = 249.0
text = "XM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XM" type="SpinBox" parent="VBC/Params"]
margin_left = 62.0
margin_top = 230.0
margin_right = 136.0
margin_bottom = 254.0
min_value = -100.0
__meta__ = {

}
[connection signal="toggled" from="VBC/Params/UClampOn" to="." method="_on_UClampOn_toggled"]
[connection signal="value_changed" from="VBC/Params/UClamp" to="." method="_on_UClamp_value_changed"]
[connection signal="toggled" from="VBC/Params/LClampOn" to="." method="_on_LClampOn_toggled"]
[connection signal="value_changed" from="VBC/Params/LClamp" to="." method="_on_LClamp_value_changed"]
[connection signal="value_changed" from="VBC/Params/Vol" to="." method="_on_Vol_value_changed"]
[connection signal="item_selected" from="VBC/Params/Output" to="." method="_on_Output_item_selected"]
[connection signal="value_changed" from="VBC/Params/From" to="." method="_on_From_value_changed"]
[connection signal="value_changed" from="VBC/Params/AM" to="." method="_on_AM_value_changed"]
[connection signal="value_changed" from="VBC/Params/XM" to="." method="_on_XM_value_changed"]
